bk_ida/gccida/g3/size_int_wide
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2414:38: error: must use 'enum' tag to refer to type 'size_type_kind'
tree  size_int_wide( __int64 number, size_type_kind kind) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2423:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2425:6: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
v2 = size_htab_11; 
     ^~~~~~~~~~~~
     size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2427:7: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
if ( !size_htab_11 ) 
      ^~~~~~~~~~~~
      size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2429:1: error: use of undeclared identifier 'size_htab_11'
size_htab_11 = htab_create( 0x400uLL, size_htab_hash, size_htab_eq, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2430:25: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
ggc_add_deletable_htab( size_htab_11, 0LL, 0LL); 
                        ^~~~~~~~~~~~
                        size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2431:1: error: use of undeclared identifier 'new_const_10'
new_const_10 = make_node( INTEGER_CST); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2432:21: error: use of undeclared identifier 'new_const_10'
ggc_add_tree_root( &new_const_10, 1); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2433:6: error: use of undeclared identifier 'size_htab_11'; did you mean 'size_htab_eq'?
v2 = size_htab_11; 
     ^~~~~~~~~~~~
     size_htab_eq
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:1935:1: note: 'size_htab_eq' declared here
size_htab_eq (x, y)
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2435:6: error: use of undeclared identifier 'new_const_10'
v4 = new_const_10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2437:1: error: use of undeclared identifier 'new_const_10'
new_const_10->int_cst.int_cst.low = number; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2444:6: error: use of undeclared identifier 'new_const_10'
v4 = new_const_10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2451:7: error: use of undeclared identifier 'new_const_10'
v10 = new_const_10; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2452:9: error: use of undeclared identifier 'new_const_10'
*slot = new_const_10; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/fold-const.c:2453:1: error: use of undeclared identifier 'new_const_10'
new_const_10 = make_node( INTEGER_CST); 
^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/size_int_wide/src/obj/fold-const.o] Error 1
